# django-localflavor

./: .coveragerc  .editorconfig  .gitignore  .landscape.yml  .prospector.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.rst  localflavor.prospector.yaml  pyproject.toml  runtests.py  setup.cfg  setup.py  tasks.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  test.yml
.tx/: config
docs/: Makefile  authors.rst  authors.rst~  changelog.rst  conf.py  generic.rst  index.rst  make.bat  requirements.txt
docs/_templates/: layout.html
docs/extensions/: promises.py  settings.py
docs/localflavor/: ae.rst  ar.rst  at.rst  au.rst  be.rst  bg.rst  br.rst  br.rst~  ca.rst  ch.rst  cl.rst  cn.rst  co.rst  cz.rst  de.rst  dk.rst  ec.rst  ee.rst  eg.rst  es.rst  fi.rst  fr.rst  gb.rst  gh.rst  gr.rst  hk.rst  hr.rst  (+44 more)
localflavor/: __init__.py  compat.py  deprecation.py  models.py  test_settings.py
requirements/: port.txt  tests.txt
scripts/: move_tests.py  port.py
tests/: requirements.txt  settings.py  test_ar.py  test_at.py  test_be.py  test_bg.py  test_br.py  test_ca.py  test_ch.py  test_checksums.py  test_cl.py  test_cn.py  test_co.py  test_cz.py  test_de.py  test_deprecated.py  test_dk.py  test_ec.py  test_ee.py  test_eg.py  test_es.py  test_fi.py  test_fr.py  test_gb.py  test_general.py  test_generic.py  test_gr.py  test_hk.py  test_hr.py  test_hu.py  test_id.py  test_ie.py  test_il.py  test_in.py  test_ir.py  test_is.py  test_it.py  test_jp.py  test_ke.py  test_kw.py  (+27 more)
(+500 files in other folders)
