[build-system]
requires  =  ["setuptools >=77.0.3"]
build-backend  =  "setuptools.build_meta"

[project]
name  =  "django-localflavor"
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "django>=4.2",
    "python-stdnum>=1.6",
]
authors = [
  { name="Django Software Foundation", email="foundation@djangoproject.com" },
]
description = "Country-specific Django helpers"
readme = "README.rst"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://django-localflavor.readthedocs.io/en/latest/"
Source = "https://github.com/django/django-localflavor"

[tool.setuptools.dynamic]
version = { attr = "localflavor.__version__" }

[tool.flake8]
max-line-length = 119
